@@ -6,7 +6,7 @@ EndSection
 
 Section "InputDevice"
 	Identifier "touchscreen"
-	Option "Device" "/dev/input/event2"
+	Option "Device" "/dev/input/event2" #linuxdeploy
 	#Driver "multitouch"
 	#Driver "mtrack"
 	Driver "evdev"
@@ -15,7 +15,7 @@ EndSection
 Section "Device"
 	Identifier "Card0"
 	Driver "fbdev"
-	Option "fbdev" "/dev/graphics/fb0"
+	Option "fbdev" "/dev/graphics/fb0" #linuxdeploy
 	#Option "Rotate" "CW"
 EndSection
 
